--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
 name = "sudoku_solver"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 [dependencies]
-hashbrown = "0.14.3"
 itertools = "0.12.0"
+num-traits = "0.2.17"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 
 [profile.release]
+panic = "abort"
 lto = true
 codegen-units = 1
 
@@ -17,3 +21,5 @@ codegen-units = 1
 pedantic = "warn"
 nursery = "warn"
 all = "warn"
+match_on_vec_items = "allow"
+cast_possible_truncation = "allow"
