--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "sudoku_solver"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 
 [dependencies]
+crunchy = "0.2.2"
 itertools = "0.12.0"
-num-traits = "0.2.17"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
@@ -21,5 +21,4 @@ codegen-units = 1
 pedantic = "warn"
 nursery = "warn"
 all = "warn"
-match_on_vec_items = "allow"
 cast_possible_truncation = "allow"
